attempt to fix DT-1579, fix social icons wrapping round to next line

--- a/less/widgets.less
+++ b/less/widgets.less
@@ -863,6 +863,10 @@
 // 10.  #Social Icons
 // -----------------------------
 
+.social-list {
+  white-space: nowrap;
+}
+
 .social-item {
     width: 28px;
     height: 28px;
